# Hamiltonian

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: PRODUCT_BOUNDARY.md
scripts/: build-windows-app.ps1  cockpit_browser_smoke.mjs  run-cockpit.py  run-desktop.py
src/hamiltonian/: __init__.py  adapters.py  capabilities.py  cli.py  comparisons.py  core.py  desktop.py  diagnostics.py  goals.py  integrations.py  packets.py  runners.py  runtime.py  server.py
src/hamiltonian/web/: app.js  desktop-launcher.html  index.html  styles.css
tests/: conftest.py  test_adapters.py  test_capabilities.py  test_cli.py  test_comparisons.py  test_desktop.py  test_diagnostics.py  test_goals.py  test_packets.py  test_release_engineering.py  test_runner_api.py  test_runners.py
