[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hamiltonian"
version = "0.1.0"
description = "Flight software for agentic systems."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Martin Ollett" }]
dependencies = []

[project.scripts]
hamiltonian = "hamiltonian.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hamiltonian = ["web/*"]
