[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hamiltonian"
version = "0.6.0"
description = "Flight software for agentic systems."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Martin Ollett" }]
dependencies = []

[project.optional-dependencies]
desktop = ["pywebview==6.2.1"]
build = ["pyinstaller==6.21.0"]
test = ["pytest==9.0.3"]

[project.scripts]
hamiltonian = "hamiltonian.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hamiltonian = ["web/*"]
